--- a/app/src/main/res/layout/card_cell.xml
+++ b/app/src/main/res/layout/card_cell.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:orientation="horizontal">
+
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:clickable="true"
-        >
+        android:clickable="true">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -19,19 +20,24 @@
                 android:id="@+id/nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="nome" />
+                android:text="nome"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"/>
 
             <TextView
                 android:id="@+id/CEP"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="CEP" />
+                android:text="CEP"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"/>
 
             <Button
                 android:id="@+id/proximapagina"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Proxima pagina"/>
+                android:text="Proxima pagina"
+                android:layout_marginTop="10dp"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
