--- a/app/src/main/res/layout/item_mensagem_esquerda.xml
+++ b/app/src/main/res/layout/item_mensagem_esquerda.xml
@@ -2,24 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="start">
 
     <TextView
         android:id="@+id/remetenteTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remetente" />
+        android:text="Remetente"
+        android:gravity="start" />
 
     <TextView
         android:id="@+id/mensagemTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mensagem" />
+        android:text="Mensagem"
+        android:gravity="start" />
 
     <TextView
         android:id="@+id/timestampTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Timestamp" />
+        android:text="Timestamp"
+        android:gravity="start" />
 
 </LinearLayout>
