chat totalmente pronto

--- a/app/src/main/res/layout/activity_tela_de_login.xml
+++ b/app/src/main/res/layout/activity_tela_de_login.xml
@@ -27,7 +27,7 @@
         android:drawableRight="@drawable/ic_email"
         android:ems="10"
         android:hint="Email"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:textColor="#515151"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#6E6E6E"
@@ -48,7 +48,7 @@
         android:drawableRight="@drawable/ic_eye"
         android:ems="10"
         android:hint="Senha"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:textColorHint="#717171"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
