--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".selcionacond.Tela_Principal">
+    tools:context=".ui.selecionar_condominio.SelecionaCondominio">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Recycleview"
