--- a/app/src/main/res/layout/activity_tela_de_login.xml
+++ b/app/src/main/res/layout/activity_tela_de_login.xml
@@ -28,7 +28,7 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:textColor="#515151"
+        android:textColor="#000000"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#6E6E6E"
         app:circularflow_defaultRadius="20dp"
@@ -117,7 +117,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LOGIN"
-        android:textColor="#0B0909"
+        android:textColor="@color/azulrt"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
