--- a/app/src/main/res/layout/activity_criar_avisos.xml
+++ b/app/src/main/res/layout/activity_criar_avisos.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Avisos.CriarAviso.Criar_avisos">
+    tools:context=".ui.Avisos.CriarAviso.Criar_avisos">
     <TextView
         android:id="@+id/textViewTitulo_Criar_Aviso"
         android:layout_width="wrap_content"
