--- a/app/src/main/res/layout/activity_quadro_de_avisos.xml
+++ b/app/src/main/res/layout/activity_quadro_de_avisos.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Avisos.Quadrodeavisos.quadro_de_avisos">
+    tools:context=".ui.Avisos.Quadrodeavisos.quadro_de_avisos">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
