--- a/app/src/main/res/layout/activity_tela_de_cadastro.xml
+++ b/app/src/main/res/layout/activity_tela_de_cadastro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.register.Tela_de_cadastro">
+    tools:context=".ui.Registro_Login.register.Tela_de_cadastro">
 
     <ImageView
         android:id="@+id/imageView2"
