--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Base.Theme.CondSpeak" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="colorPrimary">@color/azulrt</item>
+        <item name="colorPrimary">@color/cinzaclaro</item>
     </style>
 
     <style name="Theme.CondSpeak" parent="Base.Theme.CondSpeak" />
