--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="20dp"/>
-
-    <solid android:color="@color/cinza"/>"
+    <solid android:color="@color/cinzaclaro" />
     <stroke
         android:width="2dp"
         android:color="@color/cinzaborder" />
+    <corners android:radius="20dp" />
 </shape>
