--- a/app/src/main/res/layout/activity_cadastro_condominio.xml
+++ b/app/src/main/res/layout/activity_cadastro_condominio.xml
@@ -133,9 +133,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtCep" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <EditText
         android:id="@+id/btnCadastrar"
-        style="@style/botao"
+        android:background="@drawable/button_border"
         android:layout_width="243dp"
         android:layout_height="56dp"
         android:text="Cadastrar"
