--- a/app/src/main/res/layout/activity_tela_de_cadastro.xml
+++ b/app/src/main/res/layout/activity_tela_de_cadastro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/cinza"
     tools:context=".ui.Registro_Login.register.Tela_de_cadastro">
 
     <ImageView
@@ -16,13 +16,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/logo_com_nome" />
 
     <View
         android:id="@+id/idConponents"
         style="@style/ContainerComponents"
         android:layout_width="354dp"
         android:layout_height="500dp"
+        android:background="@color/cinza"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -37,6 +38,7 @@
         android:text="Voltar"
         android:textSize="20sp"
         android:textStyle="bold|italic"
+        android:textColor="@color/branco"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.086"
@@ -135,11 +137,13 @@
         app:layout_constraintTop_toBottomOf="@id/edttelefone"
         app:layout_constraintVertical_bias="0.6" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <EditText
         android:id="@+id/btnCadastrar"
-        style="@style/botao"
-        android:layout_width="243dp"
-        android:layout_height="56dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_border"
+        android:padding="15dp"
+        android:textColor="@color/branco"
         android:text="Cadastrar"
         app:layout_constraintBottom_toBottomOf="@id/idConponents"
         app:layout_constraintEnd_toEndOf="parent"
