--- a/app/src/main/res/layout/fragment_criar_avisos.xml
+++ b/app/src/main/res/layout/fragment_criar_avisos.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cinza"
-    tools:context=".ui.Nav_bot.Avisos.CriarAviso.Criar_avisos">
+    tools:context=".ui.nav_bot.avisos.criarAviso.Criar_avisos">
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/swt"
