--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cinza"
-    tools:context=".ui.Nav_bot.perfil_user.updateperfil.UpdateFragment">
+    tools:context=".ui.nav_bot.perfil_user.updateperfil.UpdateFragment">
 
         <TextView
             android:id="@+id/edtTituloPerfil"
