--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/menu_avisos">
     <fragment
         android:id="@+id/menu_avisos"
-        android:name="com.example.condspeak.ui.Nav_bot.Avisos.AvisosFragment"
+        android:name="com.example.condspeak.ui.nav_bot.avisos.quadrodeavisos.AvisosFragment"
         android:label="fragment_avisos"
         tools:layout="@layout/fragment_avisos" />
     <fragment
